# crypto-bot-mvp

./: .env.example  .gitignore  CHANGES.patch  README.md  changes.patch  pyproject.toml  render.yaml
config/: btc-volatile.json  default.json  eth-volatile.json  fast-demo.json  profitability-test.json  sol-volatile.json  xrp-volatile.json
data/: sample_ohlcv.csv
scripts/: analyze_trade_logs.py  generate_sample_data.py  report_trades.py  run_backtest.py  run_bot.py  run_dashboard.py  run_live_stub.py  run_multi_coin_dashboard.py  run_ws_dashboard.py  run_ws_paper.py
src/crypto_bot/: __init__.py  config.py  dashboard.py  data_utils.py  engine.py  exchange.py  execution.py  groq_analyzer.py  journal.py  models.py  paper_wallet.py  performance.py  realtime.py  risk.py  strategy.py  ws_market.py
