[project]
name = "crypto-bot-mvp"
version = "0.1.0"
description = "Zero-budget crypto trading bot MVP (paper trading)"
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
